--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     
     <h2>This is a awesome project</h2>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, non.</p>
     
 </body>
 </html>
