--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h2>This is a awesome project</h2>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, non.</p>
-    
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores sunt debitis doloribus voluptates quisquam quasi error modi esse tempore numquam.</p>
+        
 </body>
 </html>
