A new method added to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, non.</p>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores sunt debitis doloribus voluptates quisquam quasi error modi esse tempore numquam.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores sunt debitis doloribus voluptates quisquam quasi error modi esse tempore numquam.</p>
         
 </body>
 </html>
